# DeepForge-WebServer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
doc/: files.html  http__server_8h_source.html  index.html  menudata.js  namespacehttp.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html
doc/search/: all_0.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_4.js  search.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
examples/1_static/: Makefile  main.cpp
examples/2_dynamic/: main.cpp
examples/3_parameters/: main.cpp
examples/3_parameters/files/: style.css
examples/4_ajax/: main.cpp
examples/4_ajax/files/: index.html
examples/5_forms/: main.cpp
examples/6_sse/: Makefile.VS  main.cpp
examples/example_ajax/: CMakeLists.txt  main.cpp
examples/example_dynamic/: CMakeLists.txt  main.cpp
examples/example_forms/: CMakeLists.txt  main.cpp
examples/example_parameters/: CMakeLists.txt  main.cpp
examples/example_sse/: CMakeLists.txt  main.cpp
examples/example_static/: CMakeLists.txt  main.cpp
src/: Doxygen.cfg  http_server.cpp  main.cpp  sockets.cpp
src/include/: http_server.h  sockets.h
